--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,4 @@ spring:
   application:
     name: msvc-peces
   config:
-    import: optional:configserver:http://localhost:8888
+    import: optional:configserver:${CONFIG_URL:http://localhost:8888}
