--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,11 @@
 spring:
+  autoconfigure:
+    exclude:
+       - org.springframework.boot.actuate.autoconfigure.metrics.SystemMetricsAutoConfiguration
+       - org.springframework.boot.actuate.autoconfigure.metrics.MetricsAutoConfiguration
   application:
     name: msvc-peces
   config:
     import: optional:configserver:${CONFIG_URL:http://localhost:8888}
+
+ 
