--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
        - org.springframework.boot.actuate.autoconfigure.metrics.SystemMetricsAutoConfiguration
        - org.springframework.boot.actuate.autoconfigure.metrics.MetricsAutoConfiguration
   application:
-    name: msvc-peces
+    name: microservicio-peces
   config:
     import: optional:configserver:${CONFIG_URL:http://localhost:8888}
 
