--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,6 +6,6 @@ spring:
   application:
     name: microservicio-peces
   config:
-    import: optional:configserver:${CONFIG_URL:http://localhost:8888}
+    import: optional:configserver:${CONFIG_URL:http://microservicio-configuraciones.railway.internal:8888}
 
  
